--- a/index.html
+++ b/index.html
@@ -12,23 +12,26 @@
     <div id="msg-text"></div>
     <button class="btn b-g" style="width:240px" onclick="closeMsg()">Понятно</button>
 </div>
+
 <div class="hdr">
     <div style="display:flex; justify-content:space-between; align-items:center;">
         <h2 id="main-title">Мафия Помощник</h2>
-        <button class="reset-link" onclick="confirmReset()">Сброс</button>
+        <div style="display:flex; gap:8px">
+            <button class="reset-link" style="border-color:#0a84ff; color:#0a84ff" onclick="toggleLog()">Лог</button>
+            <button class="reset-link" onclick="confirmReset()">Сброс</button>
+        </div>
     </div>
 </div>
+
 <div id="s1" class="s a">
-    <div class="welcome-card">
-        <h3>Добро пожаловать! 🎩</h3>
-        <p>Добавьте минимум 3 игрока, чтобы начать.</p>
-    </div>
+    <div class="welcome-card"><h3>Добро пожаловать! 🎩</h3><p>Добавьте минимум 3 игрока.</p></div>
     <div id="l1"></div>
     <div class="f-b">
         <button class="btn b-b" onclick="addP()">+ Игрок</button>
         <button class="btn b-g" onclick="if(ps.length>2)go(2)">Далее</button>
     </div>
 </div>
+
 <div id="s2" class="s">
     <div id="lp"></div>
     <div style="text-align:center;padding:18px;background:#1c1c1e;border-radius:16px;margin-bottom:12px">
@@ -39,11 +42,13 @@
         <button class="btn b-g" onclick="checkR()">Далее</button>
     </div>
 </div>
+
 <div id="s3" class="s">
     <div id="roleLimitInfo" style="text-align:center;color:#8e8e93;margin-bottom:12px;font-size:14px"></div>
     <div id="l3"></div>
     <div class="f-b"><button class="btn b-g" onclick="nextRS()">Подтвердить</button></div>
 </div>
+
 <div id="s4" class="s">
     <div id="nightStatusPanel"></div>
     <div id="voteStat" style="text-align:center;color:#8e8e93;margin-bottom:12px;font-size:14px"></div>
@@ -53,6 +58,23 @@
         <button id="cfB" class="btn b-g" onclick="doAction(selId)">Следующий ход</button>
     </div>
 </div>
-<script src="script.js?v=1.2"></script>
+
+<div id="s5" class="s">
+    <div id="finalResultsPanel"></div>
+    <div style="padding:10px"><h4 style="margin-bottom:10px">Хронология игры 📜</h4></div>
+    <div id="finalLogList" style="background:#1c1c1e; border-radius:16px; padding:12px; margin-bottom:100px"></div>
+    <div class="f-b"><button class="btn b-b" onclick="location.reload()">Новая игра</button></div>
+</div>
+
+<div id="log-overlay" class="overlay" onclick="if(event.target===this)toggleLog()">
+    <div class="overlay-content">
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px">
+            <h3 style="margin:0">История игры 📖</h3>
+            <button class="del-btn" onclick="toggleLog()" style="font-size:24px">✕</button>
+        </div>
+        <div id="log-list"></div>
+    </div>
+</div>
+<script src="script.js?v=1.3"></script>
 </body>
 </html>
